# GeneaSketch

./: .gitignore  .tmp_deep_analysis.md  AGENTS.md  CHANGELOG.md  PROJECT_VISION.md  PersonDetailPanel_clean.txt  README.md  diff.txt  errors.txt  fix.cjs  fix.js  fix2.cjs  fix3.cjs  implementation_plan.md.resolved  index.html  out.json  outdated.tmp.json  package-lock.json  package.json  release.meta.json  skills-lock.json  test_output.txt  tmp.txt  ts_errors.txt  tsc_errors.txt  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
.agents/: GENRAPH_EVOLUTION_PLAN.md  GSCHEMA_EVOLUTION_PLAN.md
_audit/: ui_rebuild_baseline.md
docs/: TODO.md  deep_analysis_report.md  file_format_compatibility.md  kinship_dictionary.md  merge_workflow_standard.md  ui_context_cards_standard.md
docs/wiki-gsk/: README.md  (+10 more)
reports/: obsolete_audit.json  obsolete_audit.md
samples/: NuñezyMendoza.ged
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai_commands.rs  main.rs
todos/: 001-complete-p1-gschema-mutations-migration.md  002-complete-p1-refactor-app-tsx.md  003-complete-p1-state-management-audit.md  004-complete-p2-standardize-wiki-rendering.md  005-complete-p2-project-root-cleanup.md  006-complete-p2-error-boundaries.md  007-complete-p1-software-wiki.md  010-complete-p1-remove-legacy-engine.md  012-complete-p1-audit-summary-2026-03-02.md  013-complete-p1-child-union-canonical-linkage.md  014-complete-p1-parentchild-nature-certainty-contract.md  015-complete-p1-edge-types-canon-unknown-policy.md  (+169 more)
(+697 files in other folders)
